Changes in 4.1:
  * Much improved icons for dark mode
  * Provide preference for forcing dark/light mode or setting other
    color themes (includes breeze light and dark)
  * Fix for formatting dock when deleting widgets (korintje)
  * Bind icon to desktop file on Wayland (antohami)
  * Fix for dual monitors under Wayland
  * Provide portable zip executable for Windows

Changes in 4.0:
  * Update to using Qt6 (jeremysanders/korintje)
  * Documentation updates
  * Copying SVG or image widgets copies image data (from slowphil)
  * Bug fixes:
     * HDF5 import
     * 3D rotation
     * Swap attributes for 2D data if transposing
     * Hide stderr from embedded usage unless debug=True
     * Fix histogram2d fro normed to density
     * Fix for datasets of different lengths if using gap_handling='ignore'
     * Rename nan_handling to gap_handling
     * Continue loading if error in plugins
     * Fix overlapping formatting dock on Mac (korintje)
  * Binaries now built using GitHub actions

Changes in 3.6.2:
  * Fix broken resource symlink handling

Changes in 3.6.1:
  * Fix appdata file
  * Fix issue in setup.cfg

Changes in 3.6:
  * Interactive rotation of 3D plots
  * Add 12-bit rainbow colormap
  * Fix crash in contour key values
  * Fix breakage with recent numpy versions due to removal of bool
  * Fix error in colormap sequence
  * About dialog shows software versions
  * Rewrite install instructions in INSTALL.md
  * Fix for Python 3.11 due to opening with universal newlines
  * Remove use of distutils
  * Fix MacOS binary

Changes in 3.5.3:
  * Fix missing documentation

Changes in 3.5.2:
  * Fix broken ChangeLog

Changes in 3.5.1:
  * Fixes for EMF generating code (requires pyemf-3.1)

Changes in 3.5:
  * Improvements in fitting (thanks to Sebastian Koenig), including:
    - Assume absolute errors by default
    - Introduce minimum and maximum fit ranges
    - Add setting to give default error value and type (absolute/relative)