@@ -214,6 +214,13 @@
             </property>
            </widget>
           </item>
+          <item row="2" column="1">
+           <widget class="QRadioButton" name="radioFormatWebP">
+            <property name="text">
+             <string>WebP</string>
+            </property>
+           </widget>
+          </item>
          </layout>
         </item>
        </layout>
